[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reeln-plugin-tiktok"
dynamic = ["version"]
description = "reeln-cli plugin for TikTok video uploads"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.11"
dependencies = []

[project.urls]
Homepage = "https://streamn.dad"
Repository = "https://github.com/StreamnDad/reeln-plugin-tiktok"
Changelog = "https://github.com/StreamnDad/reeln-plugin-tiktok/blob/main/CHANGELOG.md"
Issues = "https://github.com/StreamnDad/reeln-plugin-tiktok/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "ruff",
    "mypy",
]

[project.entry-points."reeln.plugins"]
tiktok = "reeln_tiktok_plugin:TikTokPlugin"

[tool.hatch.build.targets.wheel]
packages = ["reeln_tiktok_plugin"]

[tool.hatch.version]
path = "reeln_tiktok_plugin/__init__.py"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
omit = [
    "reeln_tiktok_plugin/login.py",
    "reeln_tiktok_plugin/__main__.py",
]

[[tool.mypy.overrides]]
module = "reeln.*"
ignore_missing_imports = true
